--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,2 +1,3 @@
 /* Imported Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
