--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,6 +24,18 @@ main {
     animation: 7.1s notification-fade-animation forwards;
 }
 
+/* -- Re-usable styling -- */
+
+/* Primary purple button */
 .button-primary {
     @apply rounded-lg bg-highlight-primary px-6 py-3 font-lexend font-semibold text-text-primary transition-colors duration-300 hover:bg-highlight-hover;
+}
+
+/* white text that can be hovered, turns purple (links, etc) */
+.hover-text-white {
+    @apply text-text-primary transition-colors duration-200 hover:cursor-pointer hover:text-highlight-primary;
+}
+/* pruple text that can be hovered, turns lighter purple (links, etc) */
+.hover-text-purple {
+    @apply text-highlight-primary transition-colors duration-200 hover:cursor-pointer hover:text-highlight-hover;
 }
