--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,7 +37,7 @@ main {
 
 .button-primary,
 .button-secondary {
-    @apply rounded-lg px-6 py-3 text-center font-lexend font-medium transition-colors duration-300;
+    @apply rounded-lg px-6 py-[14px] text-center font-lexend font-medium transition-colors duration-300 hover:cursor-pointer sm:py-3;
 }
 
 /* white text that can be hovered, turns purple (links, etc) */
