feat: add border to profile pictures

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,6 +73,7 @@ main {
     background-image: url("../../public/assets/profile-picture/default.png");
     background-size: contain;
     aspect-ratio: 1;
+    border: 3px solid #0e0e0e;
 }
 
 .profile-picture-wrapper:hover {
