feat: add styles for game covers

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -101,3 +101,8 @@ main {
 .search-bar {
     @apply rounded bg-searchInput-primary px-2 py-1.5 pr-9 font-lexend text-text-primary focus:outline-none;
 }
+
+/* Game cover picture elements */
+.game-cover {
+    @apply aspect-[3/4] rounded-md;
+}
