--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -120,7 +120,8 @@ main {
 }
 
 .multiline-input,
-.text-input {
+.text-input,
+.dropdown-input {
     @apply rounded bg-input-primary px-2 py-1.5 font-lexend text-text-primary focus:outline-none;
 }
 
